web-ui/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-copilot-ui
  namespace: kube-copilot-agent
spec:
  selector:
    app: kube-copilot-ui
  ports:
    - name: http
      port: 80
      targetPort: http
